<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="ui.DevotionalSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/settingsPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secretPlace"
            android:textAlignment="center"
            android:textColor="#9E555557"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settingsPageTitle"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#040009"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeText"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/info"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note"
            android:gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/dailyReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dailyReminder"
                android:textColor="#040009"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/switchDailyReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="@string/remindMe"
                android:textColor="#040009"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/selectTime"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/airPlaneModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="Switch Airplane Mode"
                android:textColor="#040009"
                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/btnAirPlaneId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="Switch"
                android:inputType="none" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skip"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:visibility="invisible"
                android:textColor="@color/colorPrimary"
                android:layout_toLeftOf="@id/middle_splitter"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <View
                android:id="@+id/middle_splitter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/done"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/middle_splitter"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/done"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>