<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.DevotionalNoteActivity"
    android:background="#FEFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/noteHeading"
        android:background="#080019"
        android:layout_marginTop="15dp"
        android:text="devotionalDate|devotionalTitle"
        android:textColor="@color/cardview_light_background"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:background="#E0E4E4">

        <EditText
            android:id="@+id/noteEditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title"
            android:textStyle="bold"
            android:background="#FEFFFF"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:background="#FEFFFF"
            android:textSize="18sp"
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prevEntries"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/prev_note"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:layout_toLeftOf="@id/middle_splitter"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <View
                android:id="@+id/middle_splitter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/saveNote"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/middle_splitter"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal"
                android:text="@string/save_note"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>