<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.DevotionalActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/devImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/y2020" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="#101010"
            android:text="@string/Reconnect"
            />
        <Button
            android:id="@+id/buttonRetry"
            android:visibility="gone"
            android:text="@string/Retry"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateDev"
                android:layout_width="wrap_content"
                android:text="date"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="#101010"
            android:paddingLeft="15dp"
            android:paddingBottom="8dp"
            android:text="Title"/>
        <TextView
            android:id="@+id/authorDev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#7E7373"
            android:paddingLeft="15dp"
            android:paddingBottom="11dp"
            android:text="Author"/>
        <TextView
            android:id="@+id/memoryVerseDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Memory Verse"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/memoryVersePassageDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Memory Verse Passage"
            android:textSize="20sp"
            android:paddingLeft="15dp"
            android:textColor="#073EB5"
            android:paddingBottom="11dp"
            android:textStyle="italic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#181819"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:text="@string/read"/>
            <TextView
                android:id="@+id/fullPassageDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bible Scripture"
                android:textSize="20sp"
                android:paddingLeft="65dp"
                android:layout_gravity="right"
                android:textColor="#073EB5"
                android:textStyle="normal"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/inAYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#181819"
                android:textStyle="bold"
                android:textSize="19sp"
                android:paddingLeft="15dp"
                android:text="@string/bibleYear"/>
            <TextView
                android:id="@+id/bibleInAYearDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scriptures"
                android:textSize="19sp"
                android:paddingLeft="130dp"
                android:layout_gravity="right"
                android:textColor="#073EB5"
                android:textStyle="normal"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/fullTextDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Devotion Writeup"
            android:paddingLeft="15dp"
            android:textSize="17sp"
            android:textColor="#616766"/>

    </LinearLayout>
</ScrollView>